fix: Use CSS instead of collapsing navbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,3 +9,7 @@ iframe {
   height: 300px;
   width: 400px;
 }
+
+.navbar-brand.container {
+  display: flex;
+}
